--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -46,7 +46,7 @@
 	commentstyle=\color{sh_comment}\itshape,
 	captionpos=b,
 	xleftmargin=0.7cm, xrightmargin=0.5cm,
-	escapebegin={\lstsmallmath}, escapeend={\lstsmallmathend}
+	escapebegin={$$}, escapeend={$$}
 }
 
 \pagenumbering{gobble}
