--- a/src/include/packages.tex
+++ b/src/include/packages.tex
@@ -69,6 +69,7 @@
 \usepackage{todonotes}
 \usepackage{subcaption}
 \usepackage{xcolor}
+\usepackage{algorithm2e}
 
 \lstdefinelanguage{Xtext}{
 	morekeywords={grammar, with, hidden, generate, as, import, returns, current, terminal, enum},
@@ -110,14 +111,3 @@ tabsize=4
 \definecolor{sh_keyword}{rgb}{0.52, 0.11, 0.36}  % #5F1441
 \definecolor{sh_string}{rgb}{0.06, 0.09, 0.85} % #101AF9
 
-\def\lstsmallmath{\leavevmode\ifmmode \scriptstyle \else  \fi}
-\def\lstsmallmathend{\leavevmode\ifmmode  \else  \fi}
-
-\usepackage{mdframed}
-\mdfdefinestyle{quote}{%
-	linecolor=gray,
-	rightline=false, topline=false, bottomline=false,
-	outerlinewidth=5pt,
-	innerleftmargin=1em,
-	backgroundcolor=white
-}
